[metadata]
name = getuserinformation
version = attr: get_user_information.__version__
author = A.A. Suvorov
author_email = saneksking@gmail.com
description = 'Get USer Information - A library for get user information.'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saneksing
project_urls =
    Documentation = https://github.com/saneksking/getuserinformation/blob/master/README.md
    Release notes = https://github.com/saneksking/getuserinformation/releases
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    saneksking
    getuserinformation
    getuserinfo

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
